@@ -25,166 +25,587 @@ package compiler.intrinsics;
 
 /*
  * @test
+ * @library /test/lib
  * @requires vm.opt.final.UseVectorizedMismatchIntrinsic == true
  * @modules java.base/jdk.internal.misc
  *          java.base/jdk.internal.util
- *
- *  @run main/othervm -XX:CompileCommand=quiet -XX:CompileCommand=compileonly,*::test*
- *                    -Xbatch -XX:-TieredCompilation
- *                    -XX:UseAVX=3
- *                     compiler.intrinsics.VectorizedMismatchTest
- *
- *  @run main/othervm -XX:CompileCommand=quiet -XX:CompileCommand=compileonly,*::test*
- *                    -Xbatch -XX:-TieredCompilation
- *                    -XX:+UnlockDiagnosticVMOptions -XX:UseAVX=3 -XX:AVX3Threshold=0
- *                     compiler.intrinsics.VectorizedMismatchTest
+ * @run main compiler.intrinsics.VectorizedMismatchTest
  */
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Stream;
 import jdk.internal.misc.Unsafe;
 import jdk.internal.util.ArraysSupport;
+import jdk.test.lib.Platform;
+import jdk.test.lib.process.OutputAnalyzer;
+import jdk.test.lib.process.ProcessTools;
 
 public class VectorizedMismatchTest {
-    private boolean[] boolean_a = new boolean[128];
-    private boolean[] boolean_b = new boolean[128];
 
-    int testBooleanConstantLength(int length) {
-        boolean[] obja = boolean_a;
-        boolean[] objb = boolean_b;
+    static abstract class Test {
+        static final int fill = -1;
+        static final int mismatch = 0;
+
+        static final Test tests[] = {
+            new BooleanTest(), new ByteTest(), new ShortTest(), new CharTest(), new IntTest(),
+            new FloatTest(), new LongTest(), new DoubleTest(), new LoopUnswitch(), new LoopHoist()
+        };
+
+        public static void main(String[] args) {
+            for (int i = 0; i < 20_000; i++) {
+                for (Test t : tests) {
+                    t.test();
+                }
+            }
+        }
+
+        abstract void test();
+    }
+
+    /* ==================================================================================== */
+
+    static class BooleanTest extends Test {
+        boolean[] array = new boolean[128];
         long offset = Unsafe.ARRAY_BOOLEAN_BASE_OFFSET;
         int scale = ArraysSupport.LOG2_ARRAY_BOOLEAN_INDEX_SCALE;
-        return ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length, scale);
-    }
 
-    int testBooleanConstantLength0()   { return testBooleanConstantLength(0);   }
-    int testBooleanConstantLength1()   { return testBooleanConstantLength(1);   }
-    int testBooleanConstantLength64()  { return testBooleanConstantLength(64);  }
-    int testBooleanConstantLength128() { return testBooleanConstantLength(128); }
+        {
+            Arrays.fill(array, fill != 0);
+        }
+
+        void testConstantLengthMatch(int length) {
+            boolean[] obja = array;
+            boolean[] objb = array.clone();
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != -1 && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException("Expected boolean arrays of length " + length
+                        + " to match but got " + result);
+            }
+        }
+
+        void testConstantLengthMismatch(int length) {
+            boolean[] obja = array;
+            boolean[] objb = array.clone();
+            int mismatchPos = length - 1;
+            objb[mismatchPos] = mismatch != 0;
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != mismatchPos && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException("Expected boolean arrays of length " + length
+                        + " to mismatch at " + mismatchPos + " but got " + result);
+            }
+        }
+
+        void testConstantLength0() {
+            testConstantLengthMatch(0);
+        }
+
+        void testConstantLength1() {
+            testConstantLengthMatch(1);
+            testConstantLengthMismatch(1);
+        }
+
+        void testConstantLength64() {
+            testConstantLengthMatch(64);
+            testConstantLengthMismatch(64);
+        }
+
+        void testConstantLength128() {
+            testConstantLengthMatch(128);
+            testConstantLengthMismatch(128);
+        }
+
+        void test() {
+            testConstantLength0();
+            testConstantLength1();
+            testConstantLength64();
+            testConstantLength128();
+        }
+    }
 
     /* ==================================================================================== */
 
-    private byte[] byte_a = new byte[128];
-    private byte[] byte_b = new byte[128];
-
-    int testByteConstantLength(int length) {
-        byte[] obja = byte_a;
-        byte[] objb = byte_b;
+    static class ByteTest extends Test {
+        byte[] array = new byte[128];
         long offset = Unsafe.ARRAY_BYTE_BASE_OFFSET;
         int scale = ArraysSupport.LOG2_ARRAY_BYTE_INDEX_SCALE;
-        return ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length, scale);
-    }
 
-    int testByteConstantLength0()   { return testByteConstantLength(0);   }
-    int testByteConstantLength1()   { return testByteConstantLength(1);   }
-    int testByteConstantLength64()  { return testByteConstantLength(64);  }
-    int testByteConstantLength128() { return testByteConstantLength(128); }
+        {
+            Arrays.fill(array, (byte) fill);
+        }
+
+        void testConstantLengthMatch(int length) {
+            byte[] obja = array;
+            byte[] objb = array.clone();
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != -1 && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException(
+                        "Expected byte arrays of length " + length + " to match but got " + result);
+            }
+        }
+
+        void testConstantLengthMismatch(int length) {
+            byte[] obja = array;
+            byte[] objb = array.clone();
+            int mismatchPos = length - 1;
+            objb[mismatchPos] = (byte) mismatch;
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != mismatchPos && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException("Expected byte arrays of length " + length
+                        + " to mismatch at " + mismatchPos + " but got " + result);
+            }
+        }
+
+        void testConstantLength0() {
+            testConstantLengthMatch(0);
+        }
+
+        void testConstantLength1() {
+            testConstantLengthMatch(1);
+            testConstantLengthMismatch(1);
+        }
+
+        void testConstantLength64() {
+            testConstantLengthMatch(64);
+            testConstantLengthMismatch(64);
+        }
+
+        void testConstantLength128() {
+            testConstantLengthMatch(128);
+            testConstantLengthMismatch(128);
+        }
+
+        void test() {
+            testConstantLength0();
+            testConstantLength1();
+            testConstantLength64();
+            testConstantLength128();
+        }
+    }
 
     /* ==================================================================================== */
 
-    private short[] short_a = new short[64];
-    private short[] short_b = new short[64];
-
-    int testShortConstantLength(int length) {
-        short[] obja = short_a;
-        short[] objb = short_b;
+    static class ShortTest extends Test {
+        short[] array = new short[64];
         long offset = Unsafe.ARRAY_SHORT_BASE_OFFSET;
         int scale = ArraysSupport.LOG2_ARRAY_SHORT_INDEX_SCALE;
-        return ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length, scale);
-    }
 
-    int testShortConstantLength0()  { return testShortConstantLength(0);  }
-    int testShortConstantLength1()  { return testShortConstantLength(1);  }
-    int testShortConstantLength32() { return testShortConstantLength(32); }
-    int testShortConstantLength64() { return testShortConstantLength(64); }
+        {
+            Arrays.fill(array, (short) fill);
+        }
+
+        void testConstantLengthMatch(int length) {
+            short[] obja = array;
+            short[] objb = array.clone();
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != -1 && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException("Expected short arrays of length " + length
+                        + " to match but got " + result);
+            }
+        }
+
+        void testConstantLengthMismatch(int length) {
+            short[] obja = array;
+            short[] objb = array.clone();
+            int mismatchPos = length - 1;
+            objb[mismatchPos] = (short) mismatch;
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != mismatchPos && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException("Expected short arrays of length " + length
+                        + " to mismatch at " + mismatchPos + " but got " + result);
+            }
+        }
+
+        void testConstantLength0() {
+            testConstantLengthMatch(0);
+        }
+
+        void testConstantLength1() {
+            testConstantLengthMatch(1);
+            testConstantLengthMismatch(1);
+        }
+
+        void testConstantLength32() {
+            testConstantLengthMatch(32);
+            testConstantLengthMismatch(32);
+        }
+
+        void testConstantLength64() {
+            testConstantLengthMatch(64);
+            testConstantLengthMismatch(64);
+        }
+
+        void test() {
+            testConstantLength0();
+            testConstantLength1();
+            testConstantLength32();
+            testConstantLength64();
+        }
+    }
 
     /* ==================================================================================== */
 
-    private char[] char_a = new char[64];
-    private char[] char_b = new char[64];
-
-    int testCharConstantLength(int length) {
-        char[] obja = char_a;
-        char[] objb = char_b;
+    static class CharTest extends Test {
+        char[] array = new char[64];
         long offset = Unsafe.ARRAY_CHAR_BASE_OFFSET;
         int scale = ArraysSupport.LOG2_ARRAY_CHAR_INDEX_SCALE;
-        return ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length, scale);
-    }
 
-    int testCharConstantLength0()  { return testCharConstantLength(0);  }
-    int testCharConstantLength1()  { return testCharConstantLength(1);  }
-    int testCharConstantLength32() { return testCharConstantLength(32); }
-    int testCharConstantLength64() { return testCharConstantLength(64); }
+        {
+            Arrays.fill(array, (char) fill);
+        }
+
+        void testConstantLengthMatch(int length) {
+            char[] obja = array;
+            char[] objb = array.clone();
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != -1 && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException(
+                        "Expected char arrays of length " + length + " to match but got " + result);
+            }
+        }
+
+        void testConstantLengthMismatch(int length) {
+            char[] obja = array;
+            char[] objb = array.clone();
+            int mismatchPos = length - 1;
+            objb[mismatchPos] = (char) mismatch;
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != mismatchPos && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException("Expected char arrays of length " + length
+                        + " to mismatch at " + mismatchPos + " but got " + result);
+            }
+        }
+
+        void testConstantLength0() {
+            testConstantLengthMatch(0);
+        }
+
+        void testConstantLength1() {
+            testConstantLengthMatch(1);
+            testConstantLengthMismatch(1);
+        }
+
+        void testConstantLength32() {
+            testConstantLengthMatch(32);
+            testConstantLengthMismatch(32);
+        }
+
+        void testConstantLength64() {
+            testConstantLengthMatch(64);
+            testConstantLengthMismatch(64);
+        }
+
+        void test() {
+            testConstantLength0();
+            testConstantLength1();
+            testConstantLength32();
+            testConstantLength64();
+        }
+    }
 
     /* ==================================================================================== */
 
-    private int[] int_a = new int[32];
-    private int[] int_b = new int[32];
-
-    int testIntConstantLength(int length) {
-        int[] obja = int_a;
-        int[] objb = int_b;
+    static class IntTest extends Test {
+        int[] array = new int[32];
         long offset = Unsafe.ARRAY_INT_BASE_OFFSET;
         int scale = ArraysSupport.LOG2_ARRAY_INT_INDEX_SCALE;
-        return ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length, scale);
-    }
 
-    int testIntConstantLength0()  { return testIntConstantLength(0);  }
-    int testIntConstantLength1()  { return testIntConstantLength(1);  }
-    int testIntConstantLength16() { return testIntConstantLength(16); }
-    int testIntConstantLength32() { return testIntConstantLength(32); }
+        {
+            Arrays.fill(array, (int) fill);
+        }
+
+        void testConstantLengthMatch(int length) {
+            int[] obja = array;
+            int[] objb = array.clone();
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != -1 && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException(
+                        "Expected int arrays of length " + length + " to match but got " + result);
+            }
+        }
+
+        void testConstantLengthMismatch(int length) {
+            int[] obja = array;
+            int[] objb = array.clone();
+            int mismatchPos = length - 1;
+            objb[mismatchPos] = (int) mismatch;
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != mismatchPos && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException("Expected int arrays of length " + length
+                        + " to mismatch at " + mismatchPos + " but got " + result);
+            }
+        }
+
+        void testConstantLength0() {
+            testConstantLengthMatch(0);
+        }
+
+        void testConstantLength1() {
+            testConstantLengthMatch(1);
+            testConstantLengthMismatch(1);
+        }
+
+        void testConstantLength16() {
+            testConstantLengthMatch(16);
+            testConstantLengthMismatch(16);
+        }
+
+        void testConstantLength32() {
+            testConstantLengthMatch(32);
+            testConstantLengthMismatch(32);
+        }
+
+        void test() {
+            testConstantLength0();
+            testConstantLength1();
+            testConstantLength16();
+            testConstantLength32();
+        }
+    }
 
     /* ==================================================================================== */
 
-    private float[] float_a = new float[32];
-    private float[] float_b = new float[32];
-
-    int testFloatConstantLength(int length) {
-        float[] obja = float_a;
-        float[] objb = float_b;
+    static class FloatTest extends Test {
+        float[] array = new float[32];
         long offset = Unsafe.ARRAY_FLOAT_BASE_OFFSET;
         int scale = ArraysSupport.LOG2_ARRAY_FLOAT_INDEX_SCALE;
-        return ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length, scale);
-    }
 
-    int testFloatConstantLength0()  { return testFloatConstantLength(0);  }
-    int testFloatConstantLength1()  { return testFloatConstantLength(1);  }
-    int testFloatConstantLength16() { return testFloatConstantLength(16); }
-    int testFloatConstantLength32() { return testFloatConstantLength(32); }
+        {
+            Arrays.fill(array, (float) fill);
+        }
+
+        void testConstantLengthMatch(int length) {
+            float[] obja = array;
+            float[] objb = array.clone();
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != -1 && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException("Expected float arrays of length " + length
+                        + " to match but got " + result);
+            }
+        }
+
+        void testConstantLengthMismatch(int length) {
+            float[] obja = array;
+            float[] objb = array.clone();
+            int mismatchPos = length - 1;
+            objb[mismatchPos] = (float) mismatch;
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != mismatchPos && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException("Expected float arrays of length " + length
+                        + " to mismatch at " + mismatchPos + " but got " + result);
+            }
+        }
+
+        void testConstantLength0() {
+            testConstantLengthMatch(0);
+        }
+
+        void testConstantLength1() {
+            testConstantLengthMatch(1);
+            testConstantLengthMismatch(1);
+        }
+
+        void testConstantLength16() {
+            testConstantLengthMatch(16);
+            testConstantLengthMismatch(16);
+        }
+
+        void testConstantLength32() {
+            testConstantLengthMatch(32);
+            testConstantLengthMismatch(32);
+        }
+
+        void test() {
+            testConstantLength0();
+            testConstantLength1();
+            testConstantLength16();
+            testConstantLength32();
+        }
+    }
 
     /* ==================================================================================== */
 
-    private long[] long_a = new long[16];
-    private long[] long_b = new long[16];
-
-    int testLongConstantLength(int length) {
-        long[] obja = long_a;
-        long[] objb = long_b;
+    static class LongTest extends Test {
+        long[] array = new long[16];
         long offset = Unsafe.ARRAY_LONG_BASE_OFFSET;
         int scale = ArraysSupport.LOG2_ARRAY_LONG_INDEX_SCALE;
-        return ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length, scale);
-    }
 
-    int testLongConstantLength0()  { return testLongConstantLength(0);  }
-    int testLongConstantLength1()  { return testLongConstantLength(1);  }
-    int testLongConstantLength8()  { return testLongConstantLength(8);  }
-    int testLongConstantLength16() { return testLongConstantLength(16); }
+        {
+            Arrays.fill(array, (long) fill);
+        }
+
+        void testConstantLengthMatch(int length) {
+            long[] obja = array;
+            long[] objb = array.clone();
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != -1 && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException(
+                        "Expected long arrays of length " + length + " to match but got " + result);
+            }
+        }
+
+        void testConstantLengthMismatch(int length) {
+            long[] obja = array;
+            long[] objb = array.clone();
+            int mismatchPos = length - 1;
+            objb[mismatchPos] = (long) mismatch;
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != mismatchPos && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException("Expected long arrays of length " + length
+                        + " to mismatch at " + mismatchPos + " but got " + result);
+            }
+        }
+
+        void testConstantLength0() {
+            testConstantLengthMatch(0);
+        }
+
+        void testConstantLength1() {
+            testConstantLengthMatch(1);
+            testConstantLengthMismatch(1);
+        }
+
+        void testConstantLength8() {
+            testConstantLengthMatch(8);
+            testConstantLengthMismatch(8);
+        }
+
+        void testConstantLength16() {
+            testConstantLengthMatch(16);
+            testConstantLengthMismatch(16);
+        }
+
+        void test() {
+            testConstantLength0();
+            testConstantLength1();
+            testConstantLength8();
+            testConstantLength16();
+        }
+    }
 
     /* ==================================================================================== */
 
-    private double[] double_a = new double[16];
-    private double[] double_b = new double[16];
-
-    int testDoubleConstantLength(int length) {
-        double[] obja = double_a;
-        double[] objb = double_b;
+    static class DoubleTest extends Test {
+        double[] array = new double[16];
         long offset = Unsafe.ARRAY_DOUBLE_BASE_OFFSET;
-        int  scale  = ArraysSupport.LOG2_ARRAY_DOUBLE_INDEX_SCALE;
-        return ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length, scale);
+        int scale = ArraysSupport.LOG2_ARRAY_DOUBLE_INDEX_SCALE;
+
+        {
+            Arrays.fill(array, (double) fill);
+        }
+
+        void testConstantLengthMatch(int length) {
+            double[] obja = array;
+            double[] objb = array.clone();
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != -1 && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException("Expected double arrays of length " + length
+                        + " to match but got " + result);
+            }
+        }
+
+        void testConstantLengthMismatch(int length) {
+            double[] obja = array;
+            double[] objb = array.clone();
+            int mismatchPos = length - 1;
+            objb[mismatchPos] = (double) mismatch;
+            int result = ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, length,
+                    scale);
+            if (result != mismatchPos && result != -(1 + length % Long.BYTES)) {
+                throw new RuntimeException("Expected double arrays of length " + length
+                        + " to mismatch at " + mismatchPos + " but got " + result);
+            }
+        }
+
+        void testConstantLength0() {
+            testConstantLengthMatch(0);
+        }
+
+        void testConstantLength1() {
+            testConstantLengthMatch(1);
+            testConstantLengthMismatch(1);
+        }
+
+        void testConstantLength8() {
+            testConstantLengthMatch(8);
+            testConstantLengthMismatch(8);
+        }
+
+        void testConstantLength16() {
+            testConstantLengthMatch(16);
+            testConstantLengthMismatch(16);
+        }
+
+        void test() {
+            testConstantLength0();
+            testConstantLength1();
+            testConstantLength8();
+            testConstantLength16();
+        }
     }
 
-    int testDoubleConstantLength0()  { return testDoubleConstantLength(0);  }
-    int testDoubleConstantLength1()  { return testDoubleConstantLength(1);  }
-    int testDoubleConstantLength8()  { return testDoubleConstantLength(8);  }
-    int testDoubleConstantLength16() { return testDoubleConstantLength(16); }
+    /* ==================================================================================== */
+
+    static class LoopUnswitch extends Test {
+        byte[] byteA = new byte[32];
+        byte[] byteB = new byte[32];
+        long offset = Unsafe.ARRAY_BYTE_BASE_OFFSET;
+        int scale = ArraysSupport.LOG2_ARRAY_BYTE_INDEX_SCALE;
+
+        int testLoopUnswitch(int length) {
+
+            int acc = 0;
+            for (int i = 0; i < 32; i++) {
+                acc += ArraysSupport.vectorizedMismatch(byteA, offset, byteB, offset, length,
+                        scale);
+            }
+            return acc;
+        }
+
+        void test() {
+            testLoopUnswitch(32);
+        }
+    }
+
+    /* ==================================================================================== */
+
+    static class LoopHoist extends Test {
+        byte[] byteA = new byte[128];
+        byte[] byteB = new byte[128];
+        long offset = Unsafe.ARRAY_BYTE_BASE_OFFSET;
+        int scale = ArraysSupport.LOG2_ARRAY_BYTE_INDEX_SCALE;
+
+        int testLoopHoist(int length, int stride) {
+
+            int acc = 0;
+
+            for (int i = 0; i < 32; i += stride) {
+                acc += ArraysSupport.vectorizedMismatch(byteA, offset, byteB, offset, length,
+                        scale);
+            }
+            return acc;
+        }
+
+        void test() {
+            testLoopHoist(128, 2);
+        }
+    }
 
     /* ==================================================================================== */
 
@@ -202,8 +623,9 @@ public class VectorizedMismatchTest {
 
         static int test(byte[] obja, byte[] objb) {
             long offset = Unsafe.ARRAY_BYTE_BASE_OFFSET;
-            int  scale  = ArraysSupport.LOG2_ARRAY_BYTE_INDEX_SCALE;
-            return ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, LENGTH, scale); // LENGTH is not considered a constant
+            int scale = ArraysSupport.LOG2_ARRAY_BYTE_INDEX_SCALE;
+            // LENGTH is not considered a constant
+            return ArraysSupport.vectorizedMismatch(obja, offset, objb, offset, LENGTH, scale);
         }
     }
 
@@ -213,76 +635,84 @@ public class VectorizedMismatchTest {
 
     /* ==================================================================================== */
 
-    int testLoopUnswitch(int length) {
-        long offset = Unsafe.ARRAY_BYTE_BASE_OFFSET;
-        int  scale  = ArraysSupport.LOG2_ARRAY_BYTE_INDEX_SCALE;
+    // Default to 1/4 of the CPUs, and allow users to override.
+    static final int MAX_PARALLELISM = Integer.getInteger("maxParallelism",
+            Math.max(1, Runtime.getRuntime().availableProcessors() / 4));
 
-        int acc = 0;
-        for (int i = 0; i < 32; i++) {
-            acc += ArraysSupport.vectorizedMismatch(byte_a, offset, byte_b, offset, length, scale);
+    private static List<String> mix(List<String> o, String... mix) {
+        List<String> n = new ArrayList<>(o);
+        for (String m : mix) {
+            n.add(m);
         }
-        return acc;
+        return n;
     }
 
-    int testLoopHoist(int length, int stride) {
-        long offset = Unsafe.ARRAY_BYTE_BASE_OFFSET;
-        int  scale  = ArraysSupport.LOG2_ARRAY_BYTE_INDEX_SCALE;
+    public static void main(String[] args) throws Exception {
+        List<String> baseConfig = List.of("-XX:CompileCommand=quiet",
+                "-XX:CompileCommand=compileonly,*::test*", "-Xbatch",
+                "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+                "--add-exports=java.base/jdk.internal.util=ALL-UNNAMED");
+        List<String> c1BaseConfig = Stream.concat(baseConfig.stream(),
+                Stream.of("-XX:+TieredCompilation", "-XX:TieredStopAtLevel=3")).toList();
+        List<String> c2BaseConfig = Stream
+                .concat(baseConfig.stream(), Stream.of("-XX:-TieredCompilation")).toList();
 
-        int acc = 0;
+        List<List<String>> configs = new ArrayList<>();
+        configs.add(new ArrayList<>(c1BaseConfig));
+        configs.add(new ArrayList<>(c2BaseConfig));
 
-        for (int i = 0; i < 32; i += stride) {
-            acc += ArraysSupport.vectorizedMismatch(byte_a, offset, byte_b, offset, length, scale);
+        if (Platform.isX64()) {
+            for (List<String> config : configs) {
+                config.add("-XX:UseAVX=3");
+            }
+
+            List<String> zeroAVX3ThresholdConfig = new ArrayList<>(c2BaseConfig);
+            zeroAVX3ThresholdConfig.add("-XX:+UnlockDiagnosticVMOptions");
+            zeroAVX3ThresholdConfig.add("-XX:UseAVX=3");
+            zeroAVX3ThresholdConfig.add("-XX:AVX3Threshold=0");
+            configs.add(zeroAVX3ThresholdConfig);
         }
-        return acc;
+
+        ArrayList<Fork> forks = new ArrayList<>();
+        int jobs = 0;
+
+        for (List<String> c : configs) {
+            ProcessBuilder pb = ProcessTools.createTestJavaProcessBuilder(
+                    mix(c, "compiler.intrinsics.VectorizedMismatchTest$Test"));
+            Process p = pb.start();
+            forks.add(new Fork(p, new OutputAnalyzer(p)));
+            jobs++;
+
+            // Wait for the completion of other jobs
+            while (jobs >= MAX_PARALLELISM) {
+                Fork f = findDone(forks);
+                if (f != null) {
+                    OutputAnalyzer oa = f.oa();
+                    oa.shouldHaveExitValue(0);
+                    forks.remove(f);
+                    jobs--;
+                } else {
+                    // Nothing is done, wait a little.
+                    Thread.sleep(200);
+                }
+            }
+        }
+
+        // Drain the rest
+        for (Fork f : forks) {
+            OutputAnalyzer oa = f.oa();
+            oa.shouldHaveExitValue(0);
+        }
     }
 
-    /* ==================================================================================== */
+    private static record Fork(Process p, OutputAnalyzer oa) { }
 
-    public static void main(String[] args) {
-        VectorizedMismatchTest t = new VectorizedMismatchTest();
-        for (int i = 0; i < 20_000; i++) {
-            t.testBooleanConstantLength0();
-            t.testBooleanConstantLength1();
-            t.testBooleanConstantLength64();
-            t.testBooleanConstantLength128();
-
-            t.testByteConstantLength0();
-            t.testByteConstantLength1();
-            t.testByteConstantLength64();
-            t.testByteConstantLength128();
-
-            t.testShortConstantLength0();
-            t.testShortConstantLength1();
-            t.testShortConstantLength32();
-            t.testShortConstantLength64();
-
-            t.testCharConstantLength0();
-            t.testCharConstantLength1();
-            t.testCharConstantLength32();
-            t.testCharConstantLength64();
-
-            t.testIntConstantLength0();
-            t.testIntConstantLength1();
-            t.testIntConstantLength16();
-            t.testIntConstantLength32();
-
-            t.testFloatConstantLength0();
-            t.testFloatConstantLength1();
-            t.testFloatConstantLength16();
-            t.testFloatConstantLength32();
-
-            t.testLongConstantLength0();
-            t.testLongConstantLength1();
-            t.testLongConstantLength8();
-            t.testLongConstantLength16();
-
-            t.testDoubleConstantLength0();
-            t.testDoubleConstantLength1();
-            t.testDoubleConstantLength8();
-            t.testDoubleConstantLength16();
-
-            t.testLoopUnswitch(32);
-            t.testLoopHoist(128, 2);
+    private static Fork findDone(List<Fork> forks) {
+        for (Fork f : forks) {
+            if (!f.p().isAlive()) {
+                return f;
+            }
         }
+        return null;
     }
 }
